- Fix navbar collapsing menu background color - Create logout button on admin portal

--- a/src/AHNet.Web/wwwroot/css/site.css
+++ b/src/AHNet.Web/wwwroot/css/site.css
@@ -33,3 +33,7 @@ pre {
   font-weight: 100;
   height: 60px;
 }
+
+.navbar-collapse.in, .navbar-collapse.collapsing{
+    background-color:#404040;
+}
